--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<swagger.version>2.2.2</swagger.version>
 		<fastjson.version>1.2.15</fastjson.version>
 		<disruptor.version>3.3.6</disruptor.version>
+		<jedis.version>2.9.0</jedis.version>
 	</properties>
 
 	<dependencies>
@@ -56,6 +57,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>${jedis.version}</version>
 		</dependency>
 
 		<dependency>
