--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 
 ###################  mybatis-plus配置  ###################
 mybatis-plus:
-  mapper-locations: classpath*:com/piers/template/repository/mapping/*.xml
+  mapper-locations: classpath*:mapper/*.xml
   typeAliasesPackage: >
     com.piers.template.data
   global-config:
@@ -30,7 +30,11 @@ mybatis-plus:
 spring:
   profiles: dev
   datasource:
-      url: jdbc:mysql://127.0.0.1:3306/pos?serverTimezone=UTC&useSSL=false&autoReconnect=true&tinyInt1isBit=false&useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://123.56.182.246:3306/magic?serverTimezone=UTC&useSSL=false&autoReconnect=true&tinyInt1isBit=false&useUnicode=true&characterEncoding=utf8
       username: root
-      password: 123456
+      password: root@root!@#
 
+magic:
+  redis:
+    host: localhost
+    port: 6379
